--- a/style.css
+++ b/style.css
@@ -1,18 +1,15 @@
-body {
-    margin: 0;
-    background: #020202;
-    cursor: crosshair;
-  }
-  canvas{display:block}
-  h1 {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #fff;
-    font-family: "Source Sans Pro";
-    font-size: 5em;
-    font-weight: 900;
-    -webkit-user-select: none;
-    user-select: none;
-  }
+.body_backgorund 
+{
+    background-image:url(ac2405b8cd6df78d9829fdad7e33ae1c.gif);
+    background-position:center;
+    background-size:cover;
+}
+
+#myCanvas{
+
+    border-width: 10px;
+    background-image: url(BirthdayImage.jpg);
+    border-style: ridge;
+    border-color: darkviolet;
+
+}
